<resources>
    <!--************************************* Common ********************************************-->
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="second">秒</string>

    <!-- ******************************** Activity Label *************************************** -->
    <string name="activity_label_feed_detail">视频详情</string>
    <string name="activity_label_trending_more">更多热门</string>
    <string name="activity_label_notification">通知</string>
    <string name="activity_label_setting">设置</string>
    <string name="activity_label_download">下载</string>
    <string name="activity_label_upload">上传</string>
    <string name="activity_label_watch_history">观看历史</string>
    <string name="activity_label_about">关于</string>
    <string name="activity_label_help">帮助</string>
    <string name="activity_label_feedback">帮助与反馈</string>
    <string name="activity_label_assets">我的资产</string>
    <string name="activity_label_account_bind">账号绑定</string>
    <string name="activity_label_video_player">视频播放</string>
    <string name="activity_label_account_edit">账号编辑</string>
    <string name="activity_label_nickname_edit">昵称编辑</string>

    <!--********************************** Exception Msg ****************************************-->
    <string name="exception_msg_network">网络连接异常</string>
    <string name="net_socket_timeout_exception">网络请求超时,请重试</string>
    <string name="unknown_exception">服务器开小差了</string>

    <string name="balance_is_not_enough">余额不足</string>
    <string name="buy_feed_fail">购买失败</string>

    <!-- ************************************** Main ******************************************* -->
    <string name="main_title">爱看</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_see_list">看单</string>
    <string name="main_tab_trending">热门</string>
    <string name="main_tab_discover">发现</string>

    <!-- ************************************* Login ******************************************* -->
    <string name="login_phone_number">手机号</string>
    <string name="login_verification_code">验证码</string>
    <string name="login_get_verification_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="login_by_third_party">使用以下方式登录</string>
    <string name="login_by_qq">QQ</string>
    <string name="login_by_wx">微信</string>
    <string name="login_by_wb">微博</string>

    <!-- ************************************* Account ***************************************** -->
    <string name="account">账号</string>
    <string name="account_login_des">登录即可获得钻石</string>
    <string name="account_balance">剩余钻石: %1$s 个</string>
    <string name="account_login">登录</string>
    <string name="account_logout">退出登录</string>
    <string name="account_trending_more">更多热门</string>
    <string name="account_notification">消息通知</string>
    <string name="account_assets">我的资产</string>
    <string name="account_download">下载管理</string>
    <string name="account_upload">上传视频</string>
    <string name="account_watch_history">观看历史</string>
    <string name="account_setting">设置</string>
    <string name="account_about">关于</string>

    <!-- ********************************** Account Edit *************************************** -->
    <string name="account_edit">账号编辑</string>
    <string name="account_edit_nickname">昵称</string>
    <string name="account_edit_avatar">头像</string>
    <string name="account_edit_sex">性别</string>
    <string name="account_edit_sex_male">男</string>
    <string name="account_edit_sex_female">女</string>

    <!-- ********************************** Nickname Edit ************************************** -->
    <string name="nickname_edit">编辑</string>
    <string name="nickname_edit_success">修改成功</string>
    <string name="gender_edit_success">修改成功</string>

    <!-- ************************************** Search ***************************************** -->
    <string name="search_input_hint_text">输入视频名</string>
    <string name="search_input_content_is_empty">输入内容不能为空</string>

    <!-- *************************************** Feed ****************************************** -->
    <string name="feed_detail">视频详情</string>
    <string name="feed_detail_video_name">片名 : %1$s</string>
    <string name="feed_detail_video_actors">演员 : %1$s</string>
    <string name="feed_detail_video_synopsis">剧情简介 : %1$s</string>
    <string name="feed_detail_video_synopsis_label">简介</string>
    <string name="feed_detail_video_actor_label">主演:</string>
    <string name="feed_detail_video_role">饰演 : %1$s</string>
    <string name="feed_start_download">成功加入下载队列</string>
    <string name="feed_detail_upload_date"> %1$s分享</string>
    <string name="feed_detail_watch_count">%1$s 次</string>
    <string name="feed_detail_like_count">%1$s 人</string>
    <string name="feed_detail_sell_price">售价: %1$s</string>
    <string name="feed_detail_buy_tip_title">提示</string>
    <string name="feed_detail_buy_tip_msg_for_play">花费 %1$s 钻石购买该电影即可观看</string>
    <string name="feed_detail_buy_tip_msg_for_download">花费 %1$s钻石 购买该电影即可下载</string>
    <string name="feed_detail_buy_tip_buy">购买</string>
    <string name="feed_detail_buy_success">购买成功</string>

    <!-- ********************************** Feed Comment  ************************************** -->
    <string name="feed_comment">评论</string>
    <string name="feed_comment_empty">暂无评论</string>
    <string name="feed_comment_success">评论成功</string>

    <!-- *************************************** Home ****************************************** -->

    <!-- ************************************* Discover **************************************** -->
    <string name="feed_discover_load_more">加载更多</string>

    <!-- ************************************* See List **************************************** -->
    <string name="see_list_recommend">今日推荐看单</string>

    <!-- ************************************* Trending **************************************** -->
    <string name="look_more">查看更多</string>

    <!-- ************************************ Notification ************************************* -->
    <string name="notification_detail">消息详情</string>
    <string name="notification_delete_success">删除成功</string>

    <!-- ************************************** Setting **************************************** -->
    <string name="setting_message_notification">消息通知</string>
    <string name="setting_account_bind">账号绑定</string>
    <string name="setting_clear_download_history">清空下载历史</string>
    <string name="setting_clear_watch_history">清空播放历史</string>
    <string name="setting_help_feedback">帮助与反馈</string>
    <string name="setting_check_version_update">检测更新</string>
    <string name="setting_privacy_policy">隐私条款</string>
    <string name="setting_about">关于</string>
    <string name="clear_download_history_alert_message">确认清空下载历史?</string>
    <string name="clear_watch_history_alert_message">确认清空播放历史?</string>
    <string name="confirm_logout_alert_message">确定退出当前账号?</string>
    <string name="clear_watch_history_success">清空成功</string>
    <string name="logout_success">已退出登录</string>

    <!-- ************************************** Upload ***************************************** -->
    <string name="media_name">请输入视频名称</string>
    <string name="media_url">请输入视频网络地址</string>

    <!-- *************************************** Help ****************************************** -->
    <string name="help">帮助</string>
    <string name="help_feedback">反馈</string>
    <string name="help_hot_problem">热点问题</string>

    <!-- ************************************** Feedback *************************************** -->
    <string name="feedback">反馈</string>
    <string name="feedback_edit_text_hint">描述问题或分享您的想法</string>
    <string name="send_feedback_success">反馈成功</string>

    <!-- ************************************** Download *************************************** -->
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="play">播放</string>

    <string name="tasks_manager_status_loading">状态: 加载中...</string>
    <string name="tasks_manager_status_pending">状态: 队列中</string>
    <string name="tasks_manager_status_started">状态: 开始下载</string>
    <string name="tasks_manager_status_connected">状态: 已连接上</string>
    <string name="tasks_manager_status_progress">状态: 下载中...</string>
    <string name="tasks_manager_status_downloading" formatted="false">状态: 正在下载 %d</string>
    <string name="tasks_manager_status_error">状态: 出错</string>
    <string name="tasks_manager_status_paused">状态: 暂停</string>
    <string name="tasks_manager_status_completed">状态: 下载完成</string>
    <string name="tasks_manager_status_not_downloaded">状态: 未下载</string>

    <!-- ************************************** About ****************************************** -->
    <string name="about_current_version">当前版本</string>
    <string name="about_new_version_update">版本更新</string>
    <string name="about_feedback">去吐槽一下</string>
    <string name="about_share_friend">分享给朋友</string>
    <string name="about_no_new_version">无新版</string>
    <string name="about_official_website">官网 www.ikan.video</string>

    <!-- ************************************** WebView **************************************** -->
    <string name="web_view_mask_title">网页由 ikan.video 提供</string>

    <!-- *************************************** Share ***************************************** -->
    <string name="share_title">分享到</string>
    <string name="wx_friends">微信好友</string>
    <string name="wx_timeline">朋友圈</string>
    <string name="wb">微博</string>
    <string name="qq_friends">QQ好友</string>
    <string name="qq_zone">QQ空间</string>
    <string name="paste_link">复制链接</string>

    <string name="share_success">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="share_cancel">分享取消</string>
    <string name="paste_link_success">复制链接成功</string>

    <!-- *************************************** Assets **************************************** -->
    <string name="current_assets">当前余额</string>
    <string name="donate_title">捐赠可获得对应数量的钻石</string>
    <string name="donate">捐赠</string>
    <string name="denomination_unit">%1$s 元</string>

    <!-- ************************************ Account  Bind ************************************ -->
    <string name="bind_qq">QQ</string>
    <string name="bind_wx">微信</string>
    <string name="bind_wb">微博</string>
    <string name="bind_yes">已绑定</string>
    <string name="bind_no">未绑定</string>
    <string name="unbind">解绑</string>
    <string name="unbind_qq_message">确定解绑QQ?</string>
    <string name="unbind_wx_message">确定解绑微信?</string>
    <string name="unbind_wb_message">确定解绑微博?</string>

    <!-- ************************************* Watch History *********************************** -->
    <string name="watch_history_is_empty">还没有观看记录哦</string>


    <!-- ************************************ Version Update *********************************** -->
    <string name="version_update">升级</string>
    <string name="version_update_ignore">忽略该版本</string>

</resources>
