<?xml version="1.0" encoding="utf-8"?>
<me.chriskyle.library.design.fragmentanim.SlidingRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <include layout="@layout/layout_toolbar" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/account_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/appbar_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        app:actualImageScaleType="centerCrop"
        app:placeholderImage="@drawable/ic_avatar_login"
        app:roundAsCircle="true" />

    <ImageView
        android:id="@+id/account_edit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/appbar_layout"
        android:padding="15dp"
        android:src="@drawable/ic_account_edit" />

    <RelativeLayout
        android:id="@+id/nickname_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_avatar">

        <TextView
            android:id="@+id/nickname"
            style="@style/Title.Primary"
            android:layout_centerInParent="true" />

        <ImageView
            android:id="@+id/gender"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/nickname" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/balance_lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nickname_lay"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/un_login_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/account_login_des"
            android:textColor="@color/primary_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/account_login_des"
            android:textColor="@color/primary_dark"
            android:textSize="14sp" />

    </FrameLayout>

    <Button
        android:id="@+id/login"
        style="@style/Widget.Login.Btn.Primary"
        android:layout_below="@id/balance_lay"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/login"
        android:background="@color/tertiary_grey" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:background="@color/content_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/account_notification"
                style="@style/Widget.Account.Item"
                android:drawableStart="@drawable/ic_notification"
                android:text="@string/account_notification" />

            <TextView
                android:id="@+id/account_assets"
                style="@style/Widget.Account.Item"
                android:drawableStart="@drawable/ic_assets"
                android:text="@string/account_assets" />

            <TextView
                android:id="@+id/account_setting"
                style="@style/Widget.Account.Item"
                android:drawableStart="@drawable/ic_setting"
                android:text="@string/account_setting" />

            <TextView
                android:id="@+id/download"
                style="@style/Widget.Account.Item"
                android:drawableStart="@drawable/ic_download"
                android:text="@string/account_download" />

            <TextView
                android:id="@+id/upload"
                style="@style/Widget.Account.Item"
                android:drawableStart="@drawable/ic_upload"
                android:text="@string/account_upload" />

            <TextView
                android:id="@+id/watch_history"
                style="@style/Widget.Account.Item"
                android:drawableStart="@drawable/ic_watch_history"
                android:text="@string/account_watch_history" />

        </LinearLayout>

    </ScrollView>

</me.chriskyle.library.design.fragmentanim.SlidingRelativeLayout>